<resources>
    <string name="app_name">PrimeNumbersOlehSuprun</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="max_value">Max value:</string>
    <string name="curent_value">Curent value:</string>
    <string name="last_prime_number">Last prime number:</string>
    <string name="percent_completion">Percent completion</string>
    <string name="input_value">Input value</string>
    <string name="reset">Reset</string>
</resources>
